fix: adjust popover z-index values for proper layering

--- a/packages/components/src/popover/styles.less
+++ b/packages/components/src/popover/styles.less
@@ -30,7 +30,7 @@
     border-radius: 2px;
     .overlay-shadow();
     padding: 8px 10px;
-    z-index: var(--stacking-level-popover-component, 10000);
+    z-index: var(--stacking-level-popover-component, 1000);
     img {
       max-width: 300px;
       display: inline-block;
@@ -69,7 +69,7 @@
     position: absolute;
     width: 0;
     height: 0;
-    z-index: var(--stacking-level-popover-component-arrow, 10001);
+    z-index: var(--stacking-level-popover-component-arrow, 1001);
     border-color: transparent;
     border-style: solid;
   }
